--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@reduxjs/toolkit": "^2.2.1",
+    "apexcharts": "^3.45.2",
+    "axios": "^1.6.7",
+    "flowbite": "^2.3.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router": "^6.22.1",
+    "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.1",
+    "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
