--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@react-navigation/native": "^6.1.10",
     "@reduxjs/toolkit": "^2.2.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "apexcharts": "^3.46.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
@@ -25,16 +28,22 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-formidable": "^1.2.0",
+    "flowbite": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.3"
   }
