--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=5000
 MONGO_URI='mongodb://127.0.0.1:27017/albStore'
 JWT_SECRET=abac12afsdkjladf
 NODE_ENV=development
+PAYPAL_CLIENT_ID=AeZK_6s4IF4zrSJeFREyfWVA-gS1jAgfCGn08u22B5XPsQ-WNONXLcxA4lmrd4OPrQuuhL1fU_czVOn6
