Added some changes on style of project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 node_modules
 uploads/image-1708809080547.jpg
 uploads/image-1708807949136.png
+uploads/image-1709769414249.png
+uploads/image-1709769519845.png
+uploads/image-1709770202634.png
+uploads/image-1709770551573.png
+uploads/image-1709770192789.png
+uploads/image-1709770345703.png
+uploads/image-1709770586578.png
+uploads/image-1709770682758.png
+uploads/image-1709770632998.png
+uploads/image-1709770161857.png
+uploads/image-1709770109515.png
+uploads/image-1709770723072.png
