--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend"
+    "dev": "concurrently \"npm run frontend\" \"npm run backend",
+    "prebuild": "chmod +x node_modules/.bin/vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
