--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run frontend\" \"npm run backend",
-    "prebuild": "chmod +x node_modules/.bin/vite",
-    "build": "./build.sh"
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
