--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "backend": "nodemon backend/index.js",
     "frontend": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run frontend\" \"npm run backend"
+    "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "install": "npm install --legacy-peer-deps",
+    "build": "npm run build:frontend",
+    "build:frontend": "npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -51,5 +54,5 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
-  }  
+  }
 }
